@@ -301,6 +301,7 @@ C_LIB = \
 	stdlib_labs.o \
 	stdlib_ldiv.o \
 	stdlib_machine_test.o \
+	stdlib_main.o \
 	stdlib_malloc.o \
 	stdlib_math.o \
 	stdlib_mkdtemp.o \
@@ -546,7 +547,6 @@ MATH_LIB = \
 	stdio_vsnprintf.o \
 	stdio_vsprintf.o \
 	stdlib_atof.o \
-	stdlib_machine_test.o \
 	stdlib_strtod.o \
 	time_difftime.o
 
