@@ -118,6 +118,17 @@ MATH_CONSTRUCTOR(math_init)
 
 	ENTER();
 
+	#if defined(M68881_FLOATING_POINT_SUPPORT)
+	{
+		if(FLAG_IS_CLEAR(((struct ExecBase *)SysBase)->AttnFlags,AFF_68881))
+		{
+			__show_error("This program requires a floating point processor.");
+
+			goto out;
+		}
+	}
+	#endif /* M68881_FLOATING_POINT_SUPPORT */
+
 	#if defined(IEEE_FLOATING_POINT_SUPPORT)
 	{
 		char * failed_library = NULL;
